add scheduler plan to postgres addon

--- a/app.json
+++ b/app.json
@@ -8,6 +8,10 @@
   },
   "image": "heroku/ruby",
   "addons": [
-    "heroku-postgresql"
+    "heroku-postgresql",
+    {
+      "plan": "scheduler",
+      "options": {}
+    }
   ]
 }
