delete scheduler addon

--- a/app.json
+++ b/app.json
@@ -8,10 +8,6 @@
   },
   "image": "heroku/ruby",
   "addons": [
-    "heroku-postgresql",
-    {
-      "plan": "scheduler",
-      "options": {}
-    }
+    "heroku-postgresql"
   ]
 }
